--- a/ClientDApp/src/app/nav/nav.component.html
+++ b/ClientDApp/src/app/nav/nav.component.html
@@ -3,7 +3,7 @@
     <a class="navbar-brand" href="#">Dating App</a>
 
 
-    <ul class="navbar-nav me-auto mb-2 mb-md-0" *ngIf="LoggedIn">
+    <ul class="navbar-nav me-auto mb-2 mb-md-0" *ngIf="accntSservice.currentUser$ | async">
       <li class="nav-item">
         <a class="nav-link active" href="#">Matches</a>
       </li>
@@ -15,7 +15,7 @@
       </li>
      
     </ul>
-    <div class="dropdown" *ngIf="LoggedIn" dropdown>
+    <div class="dropdown" *ngIf="accntSservice.currentUser$ | async" dropdown>
       <a class="dropdown-toggle text-light text-decoration-none" dropdownToggle>Welcome User</a>
       <div class="dropdown-menu mt-3" *dropdownMenu>
         <a class="dropdown-item">Edit Profile</a>
@@ -23,10 +23,11 @@
       </div>
     </div>
 
-    <form *ngIf="!LoggedIn" #loginForm="ngForm" class="d-flex" (ngSubmit)="login()" autocomplete="off">
+    <form *ngIf="!(accntSservice.currentUser$ | async)" #loginForm="ngForm" class="d-flex" (ngSubmit)="login()" autocomplete="off">
       <input name="username" [(ngModel)]="model.username" class="form-control me-2" type="text" placeholder="User Name">
       <input name="password" [(ngModel)]="model.password" class="form-control me-2" type="password"
         placeholder="password">
+     
       <button class="btn btn-outline-success" type="submit">Login</button>
     </form>
 
