--- a/ClientDApp/src/app/home/home.component.html
+++ b/ClientDApp/src/app/home/home.component.html
@@ -10,7 +10,7 @@
     <div *ngIf="RegisterMode" class="container">
         <div class="row justify-content-center">
             <div class="col-4">
-                <app-register [fromHomeComponent]="users"></app-register>
+                <app-register (cancelRegister)="CancelRegisterMode($event)"></app-register>
             </div>
         </div>
     </div>
