--- a/ClientDApp/src/app/nav/nav.component.html
+++ b/ClientDApp/src/app/nav/nav.component.html
@@ -1,22 +1,26 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
   <div class="container">
-    <a class="navbar-brand" href="#">Dating App</a>
+    <a class="navbar-brand" routerLink="/">Dating App</a>
 
 
-    <ul class="navbar-nav me-auto mb-2 mb-md-0" *ngIf="accntSservice.currentUser$ | async">
-      <li class="nav-item">
-        <a class="nav-link active" href="#">Matches</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">List</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link " href="#">Messages</a>
-      </li>
+    <!-- <ul class="navbar-nav me-auto mb-2 mb-md-0" *ngIf="accntSservice.currentUser$ | async"> -->
+    <ul class="navbar-nav me-auto mb-2 mb-md-0">
+      <ng-container *ngIf="accntSservice.currentUser$ | async" >
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/members" routerLinkActive="active">Matches</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/lists" routerLinkActive="active">List</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link " routerLink="/messages" routerLinkActive="active">Messages</a>
+        </li>
+      </ng-container>
+      
      
     </ul>
-    <div class="dropdown" *ngIf="accntSservice.currentUser$ | async" dropdown>
-      <a class="dropdown-toggle text-light text-decoration-none" dropdownToggle>Welcome User</a>
+    <div class="dropdown" *ngIf="(accntSservice.currentUser$ | async) as user" dropdown>
+      <a class="dropdown-toggle text-light text-decoration-none" dropdownToggle>Welcome {{user.username | titlecase}}</a>
       <div class="dropdown-menu mt-3" *dropdownMenu>
         <a class="dropdown-item">Edit Profile</a>
         <a class="dropdown-item" (click)="logout()">Logout</a>
@@ -28,7 +32,7 @@
       <input name="password" [(ngModel)]="model.password" class="form-control me-2" type="password"
         placeholder="password">
      
-      <button class="btn btn-outline-success" type="submit">Login</button>
+      <button class="btn btn-success" type="submit">Login</button>
     </form>
 
   </div>
