End of Section 7

--- a/ClientDApp/src/app/nav/nav.component.html
+++ b/ClientDApp/src/app/nav/nav.component.html
@@ -15,9 +15,12 @@
         <li class="nav-item">
           <a class="nav-link " routerLink="/messages" routerLinkActive="active">Messages</a>
         </li>
+        
       </ng-container>
       
-     
+      <li class="nav-item">
+        <a class="nav-link " routerLink="/error-test" routerLinkActive="active">Test-error</a>
+      </li>
     </ul>
     <div class="dropdown" *ngIf="(accntSservice.currentUser$ | async) as user" dropdown>
       <a class="dropdown-toggle text-light text-decoration-none" dropdownToggle>Welcome {{user.username | titlecase}}</a>
